--- a/public/offline.html
+++ b/public/offline.html
@@ -8,8 +8,8 @@
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(45deg, #2c3e50, #34495e);
-      color: #fff;
+      background: #f4f9ff;
+      color: #000;
       text-align: center;
       overflow: hidden;
     }
